refactor: update stepper lifecycle and transition handling
- Replaced direct transition method calls with lifecycle methods `onBeforeTransition` and `onAfterTransition` for improved clarity and consistency in transition management.
- Revised documentation to reflect the new lifecycle structure, enhancing developer understanding of transition hooks.
- Simplified type definitions by removing obsolete transition-related types, streamlining the API for better usability.

--- a/apps/docs/content/docs/react/api-references/define.mdx
+++ b/apps/docs/content/docs/react/api-references/define.mdx
@@ -24,7 +24,7 @@ Each step must have a unique `id`. You can add any custom properties (`title`, `
 | Property | Type | Description |
 | -------- | ---- | ----------- |
 | `steps` | `Steps` | The array of step objects you passed |
-| `useStepper` | `(props?) => Stepper & TransitionMethods & TransitionState` | Hook for state, navigation, query, flow, metadata ([Hook](./hook)) |
+| `useStepper` | `(props?) => Stepper` | Hook for state, navigation, query, flow, metadata ([Hook](./hook)) |
 | `Scoped` | `Component` | Provider for stepper context ([Scoped](./scoped)) |
 | `Stepper` | `StepperPrimitives<Steps>` | Type-safe UI primitives ([Primitives](./primitives)) |
 
